force-app/main/default/objects/Property_User_Junction__c/Property_User_Junction__c.object-meta.xml
<CustomObject>
    <label>Property-User-Junction</label>
    <nameField>
        <label>Property-User-Junction-Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Property-User-Junctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>