force-app/main/default/objects/Property_User_Junction__c/fields/Google_Drive_Id__c.field-meta.xml
<CustomField>
    <fullName>Google_Drive_Id__c</fullName>
    <label>Google Drive Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>