force-app/main/default/objects/Property_User_Junction__c/fields/Immobilie__c.field-meta.xml
<CustomField>
    <fullName>Immobilie__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Immobilie</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Property-User-Junctions</relationshipLabel>
    <relationshipName>Property_User_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>