force-app/main/default/objects/Property_User_Junction__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Immo Benutzer</label>
    <referenceTo>Realty_User__c</referenceTo>
    <relationshipLabel>Property-User-Junctions</relationshipLabel>
    <relationshipName>Property_User_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>